// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Logo/> renders the image logo 1`] = `
<div
  className="cl-logo"
  title="Foo"
>
  <img
    alt="Foo"
    onLoad={[Function]}
    src="http://test.host/image.img"
    style={
      Object {
        "display": "none",
      }
    }
  />
</div>
`;

exports[`<Logo/> renders the text logo 1`] = `
<div
  className="cl-logo"
  title="Foo"
>
  Foo
</div>
`;
